--- a/src/main/resources/com/example/piglatingenerator/view.fxml
+++ b/src/main/resources/com/example/piglatingenerator/view.fxml
@@ -6,16 +6,15 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane fx:controller="com.example.piglatingenerator.Controller" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.piglatingenerator.Controller">
    <children>
       <TextField fx:id="userInput" layoutX="21.0" layoutY="210.0" prefHeight="40.0" prefWidth="450.0" />
       <Button fx:id="generatePigLatinButton" layoutX="21.0" layoutY="260.0" mnemonicParsing="false" onMouseClicked="#displayPigLatin" prefHeight="40.0" prefWidth="450.0" text="Generate Pig Latin">
          <font>
-            <Font size="20.0" />
+            <Font size="14.0" />
          </font>
       </Button>
-      <Text fx:id="pigLatinText" fill="RED" layoutX="139.0" layoutY="150.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pig Latin Displayed Here">
+      <Text fx:id="pigLatinText" fill="RED" layoutX="4.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pig Latin Displayed Here" textAlignment="CENTER" wrappingWidth="492.5023193359375">
          <font>
             <Font size="20.0" />
          </font>
